<resources>
    <string name="app_name">MovieTracker</string>

    <!-- Watch item Strings-->
    <string name="button_addWatchitem">Add Watch Item</string>
    <string name="button_removeWatchitem">remove Watch Item</string>

    <string name="hint_watchitemTitle">Watch Item Title</string>
    <string name="hint_watchitemLength">Watch Item Length</string>
    <string name="hint_watchitemTime">Watch Item Time</string>

    <string name="menu_addWatchitem">Add</string>
    <string name="menu_cancelWatchitem">Cancel</string>
    <string name="menu_delete_watchitem">Delete</string>

    <string name="enter_watchitem_title">Please Enter A Title</string>
    <string name="enter_watchitem_length">Please Enter the Length of the movie</string>
    <string name="enter_watchitem_time">Please Enter A Time</string>

    <string name="save_watchitem">Save Watch Item</string>


    <!-- Watched Movie Strings-->
    <string name="hint_watchedTitle">Movie Title</string>
    <string name="hint_watchedComment">Movie Comment</string>
    <string name="hint_watchedRating">Movie Rating</string>

    <string name="button_addWatchedMovie">Add Watched Movie</string>
    <string name="button_addToWatchedMovie">Add To Watched Movies</string>


    <string name="menu_addToWatched">Add</string>
    <string name="menu_addWatched">Add</string>

    <string name="enter_watchedmovie_title">Please Enter A Title</string>
    <string name="enter_watchedmovie_comment">Please Enter A Comment</string>
    <string name="enter_watchedmovie_rating">Please Enter A Rating</string>

    <string name="save_watchedmovie">Save Watched Movie</string>

    <!-- Home Page-->
    <string name="home_movies">Movies</string>
    <string name="home_watchlist">My Watchlist</string>
    <string name="home_watchedMovies">My Watched Movies</string>
    <string name="home_Stats">My Statistics</string>

    <string name ="appDesc">Store Movies You are currently watching,
    View the most popular movies out right now and,
    When you finished watching a film,
    leave your comment and your rating on the movie.
    </string>
    <string name ="appBanner">Welcome to My Movie Tracker</string>

    <string name = "menu_back">Back</string>

    <!-- Movie Page -->
   <string name ="menu_cancelMovie">Cancel</string>
   <string name ="menu_reloadMovies">Relaod</string>

   <!-- Statistic Page -->
    <string name="movieCount">Movies Watched</string>
    <string name="hoursWatched">Hours Watched</string>

</resources>
