<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.movietracker.activities.WatchItemActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary"/>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/watchitemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/hint_watchitemTitle"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/watchitemDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/hint_watchitemDescription"
                        android:inputType="text"
                        android:maxLength="80"
                        android:maxLines="3"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/watchitemTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/hint_watchitemTime"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"/>

                <Button
                    android:id="@+id/btnAddWatchItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addWatchitem"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <Button
                        android:id="@+id/btnAddToWatchedMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addToWatchedMovie"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
