<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.movietracker.activities.WatchItemActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarWatched"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary"/>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/watchedMovieTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/hint_watchedTitle"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/watchedMovieComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/hint_watchedComment"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="4"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/watchedMovieRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/hint_watchedRating"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="4"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>
                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:text="Rating:"
                        android:textSize="14sp"/>
                <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:title="@string/hint_watchitemDescription"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="80dp"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:rating="0.0" />

                <Button
                        android:id="@+id/btnAddWatchedMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addWatchedMovie"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>



            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
